--- a/playbook.yml
+++ b/playbook.yml
@@ -3,13 +3,14 @@
   hosts: all
   roles:
     - geerlingguy.pip
-  vars:
-    pip_install_packages:
-      - name: docker
 
 - name: start serving redmine on nodes
   hosts: all
   tasks:
+    - name: create env file from template
+      ansible.builtin.template:
+        src: templates/redmine.env.j2
+        dest: "{{ redmine_container_env_path }}"
 
     - name: run docker container
       docker_container:
@@ -19,25 +20,9 @@
           - 80:3000
         restart_policy: always
         detach: true
-        env:
-          REDMINE_DB_POSTGRES: "{{ redmine_db_addr }}"
-          REDMINE_DB_PORT: "{{ redmine_db_port }}"
-          REDMINE_DB_DATABASE: "{{ redmine_db_database }}"
-          REDMINE_DB_USERNAME: "{{ redmine_db_username }}"
-          REDMINE_DB_PASSWORD: "{{ redmine_db_password }}"
-          REDMINE_SECRET_KEY_BASE: "{{ redmine_secret_key_base }}"
+        env_file: "{{ redmine_container_env_path }}"
 
 - hosts: webservers
   roles:
     - role: datadog.datadog
       become: yes
-  vars:
-    datadog_site: "datadoghq.eu"
-    datadog_agent_major_version: "7"
-    datadog_checks:
-      http_check:
-        init_config:
-        instances:
-          - name: redmine
-            url: "{{ public_url }}"
-            tls_verify: yes
